--- a/test/core/Core.Rest.Tests/Core.Rest.Tests.csproj
+++ b/test/core/Core.Rest.Tests/Core.Rest.Tests.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>$(AppTargetFrameworkVersion)</TargetFramework>
-    <AssemblyName>$(SolutionNamespaceRoot).Framework.Web.Tests</AssemblyName>
+    <AssemblyName>$(SolutionNamespaceRoot).Core.Rest.Tests</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\framework\Framework.Web\Framework.Web.csproj" />
+    <ProjectReference Include="..\..\..\src\core\Core.Rest\Core.Rest.csproj" />
   </ItemGroup>
 </Project>
