--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -8,7 +8,7 @@
     <PackageReference Include="xunit" Version="$(xUnitVersion)"/>
     <PackageReference Include="xunit.extensibility.core" Version="$(xUnitVersion)"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="$(xUnitVersion)"/>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\core\Core.Testing\Core.Testing.csproj" />
