ESS-55 - First pass at adding an encryption service utilizing GCPs KMS

--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -9,6 +9,7 @@
     <PackageReference Include="xunit.extensibility.core" Version="$(xUnitVersion)"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="$(xUnitVersion)"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)"/>
+    <PackageReference Include="FluentAssertions" Version="$(FluentAssertionsVersion)" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\core\Core.Testing\Core.Testing.csproj" />
