Add more Swagger tests. Modify Framework.Web with an abstract controller that only supports content type application/json.

--- a/ExampleWebApi/ExampleWebApi.csproj
+++ b/ExampleWebApi/ExampleWebApi.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>$(AppTargetFrameworkVersion)</TargetFramework>
+    <Description>Example Web API Description (from project-&gt;package-&gt;description)</Description>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\core\Core.DependencyInjection\Core.DependencyInjection.csproj" />
