--- a/ExampleWebApi/appsettings.json
+++ b/ExampleWebApi/appsettings.json
@@ -3,7 +3,8 @@
   "OpenApi": {
     "ServiceProductSuffix": "cxp",
     "ServiceDocumentationUrl": "https://gitlab.humanaedge.com/cxp/ah-cxp-enrollment-entity-service/-/blob/master/API.md",
-    "AdditionalDescription": ""
+    "AdditionalDescription": "additional description from appsettings.json file",
+    "DocumentTitle": "Nexus API (from appsettings.json)"
   },
   "EntityStoreConfiguration": {
     "FirestoreProjectId": "ah-cxp-entity-store-np-251"
