--- a/ExampleWebApi/appsettings.json
+++ b/ExampleWebApi/appsettings.json
@@ -33,5 +33,11 @@
   },
   "ConnectionStrings": {
     "Postgres": "Host=localhost;User ID=cxp_user;Password=password;Port=5432;Database=cxp_entity_np;Pooling=true;"
+  },
+  "EncryptionServiceOptions": {
+    "ProjectId": "ah-crm-common-gke-np-105",
+    "LocationId": "us",
+    "KeyRingId": "docs-api-np-keyring",
+    "KeyId": "docs-api-np-key"
   }
 }
