--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ pack:
   script:
     - dotnet restore --no-cache
     - echo $(date +%Y%m%d%H%M%S)
-    - export PACKAGE_VERSION=$(date +%Y%m%d%H%M%S)
+    - export PACKAGE_VERSION=$(date -u +%Y%m%d%H%M%S)
     - dotnet pack /p:Channel=${CHANNEL} /p:BuildTimestamp=${PACKAGE_VERSION} -c ${CONFIGURATION} -o ${NUGET_PACKAGE_FOLDER} --no-restore
     - cd $NUGET_PACKAGE_FOLDER
     - dotnet nuget push **/*-${PACKAGE_VERSION}.nupkg -s ${ARTIFACTORY_SOURCE} -k ${ARTIFACTORY_NUGET}
