Remove correlation id and update error response contract

--- a/ExampleWebApi/appsettings.json
+++ b/ExampleWebApi/appsettings.json
@@ -4,7 +4,7 @@
     "ServiceProductSuffix": "cxp",
     "ServiceDocumentationUrl": "https://gitlab.humanaedge.com/cxp/ah-cxp-enrollment-entity-service/-/blob/master/API.md",
     "AdditionalDescription": "additional description from appsettings.json file",
-    "DocumentTitle": "Nexus API (from appsettings.json)"
+    "DocumentTitle": "Example API (from appsettings.json)"
   },
   "EntityStoreConfiguration": {
     "FirestoreProjectId": "ah-cxp-entity-store-np-251"
