--- a/ExampleWebApi/ExampleWebApi.csproj
+++ b/ExampleWebApi/ExampleWebApi.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>$(AppTargetFrameworkVersion)</TargetFramework>
+    <AssemblyName>$(SolutionNamespaceRoot).ExampleWebApi</AssemblyName>
+    <RootNamespace>$(AssemblyName)</RootNamespace>
     <Description>Example Web API Description (from project-&gt;package-&gt;description)</Description>
   </PropertyGroup>
   <ItemGroup>
