--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -9,9 +9,10 @@
     <PackageReference Include="xunit.extensibility.core" Version="$(xUnitVersion)"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="$(xUnitVersion)"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)"/>
-    <PackageReference Include="FluentAssertions" Version="$(FluentAssertionsVersion)" />
+    <PackageReference Include="FluentAssertions" Version="$(FluentAssertionsVersion)"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="$(MicrosoftExtensionsVersion)"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\core\Core.Testing\Core.Testing.csproj" />
+    <ProjectReference Include="..\..\..\src\core\Core.Testing\Core.Testing.csproj"/>
   </ItemGroup>
 </Project>
