Move common helpers to Webcore & make kms client reusable

--- a/src/core/Core.Common/Core.Common.csproj
+++ b/src/core/Core.Common/Core.Common.csproj
@@ -4,4 +4,7 @@
     <AssemblyName>$(SolutionNamespaceRoot).Core.Common</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="$(SystemComponentModelAnnotations)" />
+  </ItemGroup>
 </Project>
