Creation of telemetry library

--- a/src/framework/Framework.Rest/Framework.Rest.csproj
+++ b/src/framework/Framework.Rest/Framework.Rest.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\..\core\Core.Rest\Core.Rest.csproj" />
+      <ProjectReference Include="..\..\core\Core.Telemetry\Core.Telemetry.csproj" />
       <ProjectReference Include="..\..\core\Core.Web\Core.Web.csproj" />
     </ItemGroup>
 </Project>
