--- a/src/framework/Framework.Web/Framework.Web.csproj
+++ b/src/framework/Framework.Web/Framework.Web.csproj
@@ -16,5 +16,6 @@
     <ProjectReference Include="..\Framework.Logging\Framework.Logging.csproj" />
     <ProjectReference Include="..\Framework.Rest\Framework.Rest.csproj" />
     <ProjectReference Include="..\Framework.Swagger\Framework.Swagger.csproj" />
+    <ProjectReference Include="..\Framework.Telemetry\Framework.Telemetry.csproj" />
   </ItemGroup>
 </Project>
