--- a/test/framework/Framework.Rest.Tests/Framework.Rest.Tests.csproj
+++ b/test/framework/Framework.Rest.Tests/Framework.Rest.Tests.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\framework\Framework.Rest\Framework.Rest.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Equals.Fody" Version="$(EqualsFodyVersion)" />
+  </ItemGroup>
 </Project>
