--- a/src/core/Core.Rest/Core.Rest.csproj
+++ b/src/core/Core.Rest/Core.Rest.csproj
@@ -1,15 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-      <TargetFramework>$(LibTargetFrameworkVersion)</TargetFramework>
-      <AssemblyName>$(SolutionNamespaceRoot).Core.Rest</AssemblyName>
-      <RootNamespace>$(AssemblyName)</RootNamespace>
-    </PropertyGroup>
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="$(MicrosoftExtensionsVersion)" />
-      <PackageReference Include="Microsoft.Extensions.Primitives" Version="$(MicrosoftExtensionsVersion)" />
-      <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftJsonVersion)" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\Core.Common\Core.Common.csproj" />
-    </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>$(LibTargetFrameworkVersion)</TargetFramework>
+    <AssemblyName>$(SolutionNamespaceRoot).Core.Rest</AssemblyName>
+    <RootNamespace>$(AssemblyName)</RootNamespace>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="$(MicrosoftExtensionsVersion)"/>
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="$(MicrosoftExtensionsVersion)"/>
+    <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftJsonVersion)"/>
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="$(MicrosoftAspNetCoreWebUtilities)"/>
+    <PackageReference Include="Equals.Fody" Version="$(EqualsFodyVersion)"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Common\Core.Common.csproj"/>
+  </ItemGroup>
 </Project>
