--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,27 +27,25 @@ build:
 ####################
 # TEST
 ####################
-.test-stage:
-  before_script:
-    - echo $CI_ENVIRONMENT_URL
-    - shopt -s expand_aliases
-    - dotnet tool install -g trx2junit
-    - dotnet restore --no-cache
-    - alias run-tests="dotnet test --logger 'trx;logfilename=test_results.trx' --results-directory=. /p:CoverletOutputFormat=opencover /p:CollectCoverage=true --no-restore"
-    - mkdir -p coverage
-  after_script:
-    - /root/.dotnet/tools/trx2junit test_results.trx
-  artifacts:
-    paths:
-      - $CI_PROJECT_DIR/coverage/
-    reports:
-      junit: test_results.xml
-
 test:
   stage: test
-  extends: .test-stage
+  variables:
+    TEST_RESULTS_DIR: ${CI_PROJECT_DIR}/test-results
   script:
-    - run-tests /p:CoverletOutput=$CI_PROJECT_DIR/coverage/unit
+    - echo "env - $CI_ENVIRONMENT_URL"
+    - echo "test_result-dir - $TEST_RESULTS_DIR"
+    - mkdir -p $TEST_RESULTS_DIR
+    - dotnet restore --no-cache
+    - ./run-tests-with-coverage.sh
+  artifacts:
+    when: always
+    paths:
+      - ${TEST_RESULTS_DIR}
+    reports:
+      junit: ${TEST_RESULTS_DIR}/*test-result.xml
+      cobertura: $TEST_RESULTS_DIR/coverage.cobertura.xml
+
+
 
 ####################
 # PACK
