--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="coverlet.msbuild" Version="$(CoverletVersion)"/>
+    <PackageReference Include="JunitXml.TestLogger" Version="$(JunitTestLoggerVersion)"/>
     <PackageReference Include="xunit" Version="$(xUnitVersion)"/>
     <PackageReference Include="xunit.extensibility.core" Version="$(xUnitVersion)"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="$(xUnitVersion)"/>
