--- a/src/framework/Framework.Web/Framework.Web.csproj
+++ b/src/framework/Framework.Web/Framework.Web.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\..\core\Core.Web\Core.Web.csproj" />
     <ProjectReference Include="..\Framework.DependencyInjection\Framework.DependencyInjection.csproj" />
     <ProjectReference Include="..\Framework.Logging\Framework.Logging.csproj" />
+    <ProjectReference Include="..\Framework.PubSub\Framework.PubSub.csproj" />
     <ProjectReference Include="..\Framework.Rest\Framework.Rest.csproj" />
     <ProjectReference Include="..\Framework.Swagger\Framework.Swagger.csproj" />
     <ProjectReference Include="..\Framework.Telemetry\Framework.Telemetry.csproj" />
