Revert "Move subscription changes to another branch"
This reverts commit 17276a52d3932a1f39f65c4ca495eb321fca2c18.

--- a/src/core/Core.DependencyInjection/Core.DependencyInjection.csproj
+++ b/src/core/Core.DependencyInjection/Core.DependencyInjection.csproj
@@ -4,4 +4,7 @@
     <AssemblyName>$(SolutionNamespaceRoot).Core.DependencyInjection</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="$(FluentValidationVersion)" />
+  </ItemGroup>
 </Project>
