ESS-36 Add functional tests for PII masking

--- a/example/WebApi/appsettings.json
+++ b/example/WebApi/appsettings.json
@@ -7,14 +7,22 @@
     "DocumentTitle": "Example API (from appsettings.json)"
   },
   "EntityStoreConfiguration": {
-    "FirestoreProjectId": "ah-cxp-entity-store-np-251"
+    "FirestoreProjectId": "some-firestore-project-id"
   },
   "StackdriverOptions": {
     "IsEnabled": "false",
     "ProjectId": "Not required when run in GKE. to enable: set IsEnabled to true. For local stackdriver trace 1) set ProjectId, and 2) set GOOGLE_APPLICATION_CREDENTIALS"
   },
+  "FooSecretsOptions": {
+    "ProjectId": "some-project-id",
+    "SecretId": "some-secret-id",
+    "SecretVersionId": "1"
+  },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Formatting.Compact" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Formatting.Compact"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
